Alterações no visual

--- a/WebContent/submeter.xhtml
+++ b/WebContent/submeter.xhtml
@@ -17,7 +17,7 @@
 						invalidFileMessage="Arquivo inválido!" fileUploadListener="#{labController.upload}"
 						invalidSizeMessage="Tamanho inválido!" cancelLabel="Cancelar"
 						label="Abrir" uploadLabel="Upload" mode="advanced" multiple="false"
-						sizeLimit="1000000" allowTypes="/(\.|\/)(c)$/" oncomplete="window.location='/susana/exibir.jsf';" />
+						sizeLimit="1000000" allowTypes="/(\.|\/)(c)$/" oncomplete="window.location='/susana/exibir.susy';" />
 		</h:form>
 	</ui:define>
 </ui:composition>
