--- a/WebContent/submeter.xhtml
+++ b/WebContent/submeter.xhtml
@@ -17,7 +17,7 @@
 						invalidFileMessage="Arquivo inválido!" fileUploadListener="#{labController.upload}"
 						invalidSizeMessage="Tamanho inválido!" cancelLabel="Cancelar"
 						label="Abrir" uploadLabel="Upload" mode="advanced" multiple="true"
-						sizeLimit="1000000" allowTypes="/(\.|\/)(c|h)$/" />
+						sizeLimit="1000000" allowTypes="/(\.|\/)(c|h)$/" auto="true"/>
 					
 					<br/>
 					
