Atualizado os arquivos base e a mensagem para enviar função main

--- a/WebContent/submeter.xhtml
+++ b/WebContent/submeter.xhtml
@@ -11,7 +11,7 @@
 	<ui:define name="body">
 		<br />
 		
-		Selecione os arquivos (.c e .h): 
+        Selecione os arquivos (.c e .h) <font color="red">(Envie o arquivo main, mesmo que no mundo bom não precise)</font>: 
 		<h:form enctype="multipart/form-data">
 					<p:fileUpload 
 						invalidFileMessage="Arquivo inválido!" fileUploadListener="#{labController.upload}"
